second round of cuts on all but ch2

--- a/concl.tex
+++ b/concl.tex
@@ -608,7 +608,12 @@ ends; given sufficient willpower, it can be made to serve others.
 As I held in chapter \ref{chap:2}, changes to the city
 should not be arbitrary, at the whims of a certain set of
 producers and organizations, but part of a large-scale system design
-strategy to address the needs of all transportation users.
+strategy to address the needs of all transportation users. Complex
+changes to complex systems require significant modeling work,
+experiments, or even trial and error to get right. Old models and
+habits, like the rules of the AASHTO ``Green
+Book'' \cite[p. 181, 183]{swopeTrenton}, need to be broken, and new
+ones built to replace them. 
 
 %% The pro-side: millions of deaths if we don't do something now, so we
 %% have to accept these
