--- a/intro.tex
+++ b/intro.tex
@@ -69,14 +69,16 @@ popularly, the implications of that vision, and the alternatives to
 it, we should start by understanding the varied types and dimensions
 of historical automotive automation research.
 
+%% It is
+%% vital that we recognize t
+
 Self-driving cars are born from the
 same history as interchangeable parts, assembly lines, machine tools,
 and scientific management; as electrification, computerization, and
 networked interconnection. When asked how to make something better,
 safer, faster, easier, more productive, we involve machines or at
 least what H. M. Collins describes as ``machine-like actions''
-\cite[p. 42]{Collins}. It is
-vital that we recognize this is not a new predilection, but is
+\cite[p. 42]{Collins}. This is not a new predilection, but is
 something that has been with us since the Industrial Revolution.
 Furthermore, technological visions and concepts inscribe excitement about the
 technologies of the present moment, and this tendency has deeply
@@ -88,9 +90,7 @@ communication (or transportation\footnote{Rudolf Arnheim referred to
   cultural transportation'' \cite[p. 194]{arnheim}.}) ushers in new visions of our
 collective future. We are famously bad at these predictions \cite{vanriper}, but they
 nevertheless drive the popular imaginary, which has included automated
-vehicles since the 1920s, and other types of automation for hundreds
-of years previous.\footnote{For more on this, see chapter
-  \ref{chap:1}.} Both visions of and research on self-driving
+vehicles since the 1920s. Both visions of and research on self-driving
 technology have taken on aspects of the central information
 technologies of their day, and re-inscribed them as control
 technologies for physical devices. The history of our driverless
@@ -106,12 +106,12 @@ the driver out of the vehicle, even if a human's direct commands were
 still necessary for vehicle operations. Aachen Motors's ``Phantom
 Auto,'' operating on the same principles, toured Milwaukee a year
 later, \cite{phantomAuto} and returned as an attraction in
-Fredericksburg in 1932 \cite{phantomAuto2}. 
-Radio control had at this point been public knowledge for at least two
+Fredericksburg in 1932 \cite{phantomAuto2}.\footnote{Radio control had
+  at this point been public knowledge for at least two 
 decades, since Nikola Tesla's 1898 demonstration of a radio-controlled
 boat, but though it was not fundamentally new, the use of the
-technology on public roads nevertheless shocked onlookers.
-Contemporary news articles describe the machine as if it drove itself,
+technology on public roads nevertheless shocked onlookers.} Contemporary news articles
+describe the machine as if it drove itself, 
 as if the physical position of the person was what mattered, not the
 fact that a human was always using the radio transmitter:  ``Driverless,
 it will start its own motor, throw in its clutch, twist its steering
@@ -131,19 +131,25 @@ a few years later.
 %% For their concept cars, GM separated the control
 %% functionality for steering from that for the maintenance of speed and
 %% distance between cars.
+%% \footnote{As a
+%%   side note, this has been described not only as techno-utopian but as
+%% an outgrowth of commodity scientism, a triumph of a sort of
+%% marketing-driven approach to technology that is more rhetoric than
+%% substance \cite{smithSelling}It seems likely that commodity
+%% scientism, or a similar phenomenon, is deeply involved in the ways
+%% modern technological narratives are generated and consumed.}
+
+%% that would restore the position of the cars using
+%% gravity, a low-tech solution to the more complicated problem of
+%% steering. However,
+
 The 1939 New York World's Fair opened to great acclaim. Covering over
 a thousand acres and attracting a total of over 44 million visitors,
 the fair was a massive public spectacle demonstrating the technical
 prowess of American industry and providing a grand vision for the
 future of the nation. The structure of the exhibition---exemplified in
 its grand (and oddly-named) buildings, the Perisphere and
-Trylon---manifested the modernist techno-utopian ideology\footnote{As a
-  side note, this has been described not only as techno-utopian but as
-an outgrowth of commodity scientism, a triumph of a sort of
-marketing-driven approach to technology that is more rhetoric than
-substance \cite{smithSelling}. It seems likely that commodity
-scientism, or a similar phenomenon, is deeply involved in the ways
-modern technological narratives are generated and consumed.} that drove the
+Trylon---manifested the modernist techno-utopian ideology that drove the
 dramatic technological displays \cite[p. 371]{nyeElectrifying}. The
 great success of the fair was 
 GM's Futurama exhibit\footnote{The line for the exhibit routinely stretched to
@@ -152,10 +158,8 @@ which presented an idea of what the world would look
 like in 1960 \cite[p. 3-4]{wetmore}. Automobiles were still the focal
 point: the bird's-eye view presented a 
 future city with multi-lane elevated expressways filled with largely
-automated vehicles. The cars' lateral position was maintained via
-curved barriers that would restore the position of the cars using
-gravity, a low-tech solution to the more complicated problem of
-steering. However, the Futurama exhibit described that distance
+automated vehicles. While the cars' lateral position was maintained via
+curved barriers, the Futurama exhibit described that distance
 between cars would be maintained via a ``sophisticated system of radio
 control'' \cite[p. 5]{wetmore}.\footnote{Prior to electronic circuits, this would have been
 accomplished with vacuum tubes, a technology well-known at the time,
@@ -170,11 +174,12 @@ well-designed roads (high-speed highways, built specifically for these
 vehicles, with attendant infrastructural costs), such a system was
 reasonably coherent as a vision of what 1960 might be, from the
 perspective of attendees. This aspirational future was clean,
-modernist, and efficient; the rationalization of the factory, already
-achieved and itself a subject of a great deal of public
-interest---through factory tours of major Detroit automotive plants, and
+modernist, and efficient; the rationalization of the
+factory\footnote{A topic of public interest demonstrated through
+  popular factory tours of major Detroit automotive 
+  plants, and 
 working GM and Ford assembly lines at the earlier Century of Progress
-Exhibition in Chicago (1933-1934) \cite[p. 63-64]{nyeAmericas}---had
+Exhibition in Chicago (1933-1934) \cite[p. 63-64]{nyeAmericas}.} had
 spread to the city and 
 countryside, where working hours were reduced through electrification,
 and even driving could become leisure, the mere inhabitation of a
@@ -227,6 +232,14 @@ complexities of the road environment that make automated driving so difficult.
 
 \subsection{The Midcentury}
 
+%% ---in this case
+%% the vision of flying cars shown in \emph{The Jetsons} in 1962, a
+%% dream related to, but still distinct from, the driverless dream--
+
+%% Matt Novak\footnote{Novak writes the
+%%  blog Paleofuture, once on the \emph{Smithsonian} website, now on \emph{Gizmodo},
+%%  about past visions of the future.} suggests that
+
 By 1960, driverless vehicles had not been brought to market, but
 interest in the technology continued. Ford's vice president of
 engineering and research, Andrew Kucher, was referenced in the \emph{Chicago
@@ -234,13 +247,9 @@ Daily Tribune}, April 25, 1959, in a speech he gave at Northwestern
 University, taking seriously the idea of autonomous cars. The article,
 titled ``In 50 Years: Cars Flying Like Missiles!'' asks readers: ``Can
 you imagine flying automobiles directed by automatic guidance
-systems?'' \cite{tribuneViaPaleo}. Matt Novak\footnote{Novak writes the
- blog Paleofuture, once on the \emph{Smithsonian} website, now on \emph{Gizmodo},
- about past visions of the future.} suggests that ``Arthur Radebaugh's syndicated
+systems?'' \cite{tribuneViaPaleo}. ``Arthur Radebaugh's syndicated
 Sunday comic `Closer Than We Think' was also a likely inspiration''
-for contemporary images of advanced car technologies---in this case
-the vision of flying cars shown in \emph{The Jetsons} in 1962, a
-dream related to, but still distinct from, the driverless dream---as in
+for contemporary images of advanced car technologies (\emph{The Jetsons}), as in
 1958 it depicted hovering 
 cars floating on an air cushion in an ``already proved'' concept
 publicized by the same Andrew Kucher \cite{novakRecapping}. Newspapers
@@ -254,6 +263,9 @@ where it is going, and the road surface is bordered with ridges that
 visually suggest the idea that the car will keep itself within the
 demarcated space.
 
+%% and the thoroughly contemporary
+%% dashboard and instrument cluster,
+
 One particularly salient public image from the 1950s comes from the
 \emph{Saturday Evening Post}, which ran an advertisement for ``America's
 Electric Light and Power Companies'' that depicted self-driving cars
@@ -262,41 +274,43 @@ coasting through an idyllic landscape, guided by electricity
 are clean and clear, stretching off confidently into the distance. The
 landscape, tamed and controlled, yet retains its natural beauty:
 nowhere to be seen are smokestacks and the power plants generating the
-guiding force of these vehicles. Instead, we see the rural, even
-pastoral, landscape largely unbesmirched, only cut across by the
+guiding force of these vehicles. The rural, even
+pastoral, landscape is largely unbesmirched, only cut across by the
 rationalization of a futuristic interstate highway system.\footnote{Recall that
 the Federal Aid Highway Act of 1956 began the creation of the
 interstate system as we have it today.} Within the finned, bubble
 canopied auto sits a nuclear family---father,
-mother, daughter, and son---enjoying family time, a game of dominoes.
+mother, daughter, and son---enjoying family time.
 Perfectly coiffed, snappily dressed, and totally at ease, the mother
-and daughter play, while the son admires a model of a futuristic
+and daughter play dominoes, while the son admires a model of a futuristic
 delta-wing jet aircraft and the father looks on. Their faces glow with
 expressions of domestic contentment. The father, in the ``driver's
-seat,'' is turned away from the wheel and the thoroughly contemporary
-dashboard and instrument cluster, facing backward. The caption reads: 
+seat,'' is turned away from the wheel, facing backward. The caption reads: 
 \begin{quote}
 One day your car may speed along an electric super-highway, its speed
 and steering automatically controlled by electronic devices embedded
 in the road. Travel will be more enjoyable. Highways will be made
-safe---by electricity! No traffic jams . . . no collisions . . . no
+safe---by electricity! No traffic jams ... no collisions ... no
 driver fatigue \cite{weber}.
 \end{quote}
 The limitless possibilities of electricity, measured and controlled by
-America's Electric Light and Power Companies, reproduce a conservative
+America's Electric Light and Power Companies, reproduced a conservative
 present into an equally conservative future. 
 
-If electricity was still the force that would be harnessed to make the
-roadways safe, what were the ``mechanical equivalents of sense
-organs'' \cite{wienerMachineThreat} for the driverless car? New
-wartime and postwar developments in electronics, the same ones that
-inspired new science fiction visions of the future, drove actual
-research in automated vehicle systems. In the early 1950s, General
-Motors and RCA developed a scale model of an automated highway system,
-completed in 1953, that would allow the two companies to experiment
-with developing real steering and distance control systems \cite[p. 6]{wetmore}.
+%% If electricity was still the force that would be harnessed to make the
+%% roadways safe, what were the ``mechanical equivalents of sense
+%% organs'' \cite{wienerMachineThreat} for the driverless car? 
+%% But unlike the 
+%% light-guided vehicle from the 1930s, this car had a new guidance
+%% mechanism, which is entirely 
+New wartime and postwar developments in electronics, the same ones that
+inspired new science fiction visions of the future, drove
+research in automated vehicle systems sensing and control. In 1953, General
+Motors and RCA completed a scale model of an automated highway system,
+that would allow the two companies to experiment
+with developing steering and distance control systems \cite[p. 6]{wetmore}.
 General Motors's 1950s Firebird concept
-vehicles sold themselves on this research, despite the fact that
+vehicles marketed themselves on this research, despite the fact that
 Firebird II ``had no automated capabilities whatsoever'' \cite[p. 7]{wetmore}. GM's
 promotional films suggested the vehicle could be controlled
 electronically from traffic control towers---like those in use in
@@ -309,12 +323,11 @@ this optimistic vision of GM's engineering ability a reality,
 engineers lead by Joseph Bidwell and Lawrence Hafstad within GM
 Research installed ``pick-up coils'' on a 1958 Chevrolet: through a
 feedback system like that of the ``electric eye automobile,'' these
-coils would adjust the vehicle's steering \cite[p. 7]{wetmore}. But unlike the
-light-guided vehicle from the 1930s, this car had a new guidance
-mechanism, which is entirely consistent with the image presented in
-the \emph{Saturday Evening Post}: a wire carrying alternating current would
-be embedded in the road and would be tracked by the pick-up coils on
-the car. A GM press release announced on February 14, 1958:
+coils would detect a wire embedded in the road and adjust the
+vehicle's steering \cite[p. 7]{wetmore}. Consistent with the image presented in
+the \emph{Saturday Evening Post}, and a significant advance from
+Futurama's mechanical ``half-pipes,'' alternating current would
+be the control mechanism of the future. A GM press release announced:
 \begin{quote}
 An automatically guided automobile cruised along a one-mile check road
 at General Motors Technical Center today, steered by an electric cable
@@ -325,20 +338,22 @@ along the two-lane check road and negotiated the banked turn-around
 loops at either end without the driver's hands on the steering wheel
 \cite[p. 7]{wetmore}.
 \end{quote}
-
-Instead of the mechanical ``half-pipes'' of the 1939 Futurama roadway, advances in
-technology would allow a future of automated steering powered
-by alternating current. Electromagnetism supplemented electricity as the
-guidance mechanism of choice. Also in the 1950s, RCA's
+ Also in the 1950s, RCA's
 Vladimir Zworykin, a lead inventor of television technology, was
 working on an intelligent road system of his own. His concept,
 inspired by ``railroad block signals,'' used circuits embedded in the
 road to magnetically sense vehicle speed and location, placing sensing
-and coordination capabilities outside of the vehicle, in road-side
-systems:  Zworykin's centralized planning model would send
+and coordination capabilities outside of the vehicle:  Zworykin's
+centralized planning model would send 
 instructions to individual cars, and a 1/40th scale demonstration
 system was built for the 1960 Highway Research Board meeting in
 Washington D.C \cite[p. 9]{wetmore}.
+
+%% Instead of the mechanical ``half-pipes'' of the 1939 Futurama roadway, advances in
+%% technology would allow a future of automated steering powered
+%% by alternating current. Electromagnetism supplemented electricity as the
+%% guidance mechanism of choice.
+
 
 The 1964 New York World's Fair hosted a second Futurama exhibit, in
 which GM presented an automated highway system much like Zworykin's
@@ -357,25 +372,34 @@ electronics, and the expansion of early control theory into
 cybernetics through the work of Norbert Wiener (who gave numerous
 public lectures through the 1950s) and his contemporaries seemed
 poised to make revolutionary applications of electrical control
-possible. Wiener himself weighed in, in a lecture given in 1960, to
+possible. In a lecture given in 1960, Wiener
 make the case for automated control systems: ``by the time we are able
 to react to our senses and stop the car which we are driving, it may
 already have run head on into a wall,'' he wrote, and the answer to
 this problem was the lightning speed of cybernetic control \cite{wienerOn}. But real
 developments in automated driving did not materialize, and research
 languished, out of the public eye, throughout the late 1960s and 1970s
-\cite[p. 10]{wetmore}. Instead of autonomous vehicles we got a push
+\cite[p. 10]{wetmore}. Instead of autonomous vehicles---in a trend
+that arguably began
+with \emph{Safety Last} and \emph{Unsafe at Any Speed}
+\cite{oconnellmyers} \cite{nader}---the public pushed
 for an
 increasing array of safety systems designed to make vehicles more forgiving
 of human errors---starting with rudimentary
 mechanical automation such as seat belts, and continuing through
-airbags, ABS, and other more modern systems---that rose to public attention
-with \emph{Safety Last} and \emph{Unsafe at Any Speed}
-\cite{oconnellmyers} \cite{nader}. 
+airbags, ABS, and other more modern systems.
 
 \subsection{Research at the Turn of the Century}
 
 %% FOOTNOTE the acronyms
+%%  Typical of vehicles of the time,
+%% VITA\footnote{VIsion Technology Application. The original VITA was a
+%%   D811 Mercedes van, chosen in order to store both computing
+%%   equipment, power supplies, and environmental control for those
+%%   electronics \cite[p. 37]{ulmerVITA}.} used
+%% an analog video-camera signal processed through a framegrabber
+%% which would feed the visual information into the transputer-based
+%% parallel-processing system \cite[p. 38]{ulmerVITA}.
 
 Not all vehicle research focused on cars themselves, and active
 efforts to design and develop intelligent vehicle-highway systems (IVHS) occurred
@@ -390,7 +414,7 @@ computer-vision based approaches. While computer vision techniques had
 been experimented with for vehicle guidance since 1969, it was not
 until the 1980s that microelectronics became powerful enough to
 process images in near real time and compact enough to be placed on
-the vehicle itself \cite[p. v]{dickmannsDynamic}. In the 1980s, Ernst
+the vehicle itself \cite[p. v]{dickmannsDynamic} \cite{vamors-p}. In the 1980s, Ernst
 Dickmanns's lab at the 
 University Bundswerhr, in Munich, Germany was active in some of the
 earliest self-driving car research and development \cite{schmidhuber}. Their early
@@ -407,21 +431,20 @@ panel van \cite{bogostHist}, was successfully tested on roads without
 traffic at up to 
 60 miles per hour, and was soon followed by new projects produced as
 part of the EUREKA PROMETHEUS\footnote{PROgraMme for a European
-  Traffic of Highest Efficiency and Unprecedented Safety} project \cite{eureka}. The largest driverless vehicle
+  Traffic of Highest Efficiency and Unprecedented Safety} project
+\cite{eureka}. 
+
+The largest driverless vehicle 
 research project of the time, funded by EU member states to the tune
 of almost 750 million Euros, PROMETHEUS ran from 1987 to 1995 and
 involved the VaMP\footnote{VaMoRs Passenger Car} vehicle from
 Dickmanns's research lab along with its 
-Daimler-Benz twin, VITA-II. Typical of vehicles of the time,
-VITA\footnote{VIsion Technology Application. The original VITA was a
+Daimler-Benz twin, VITA-II.\footnote{VIsion Technology Application. The original VITA was a
   D811 Mercedes van, chosen in order to store both computing
   equipment, power supplies, and environmental control for those
-  electronics \cite[p. 37]{ulmerVITA}.} used
-an analog video-camera signal processed through a framegrabber
-which would feed the visual information into the transputer-based
-parallel-processing system \cite[p. 38]{ulmerVITA}. The VITA-II
+  electronics \cite[p. 37]{ulmerVITA}.} Like its forebear VITA, the VITA-II
 system, scaled down to fit in 
-a passenger car (an S-class SEL 500), again used digitized analog
+a passenger car (an S-class SEL 500), used digitized analog
 video signals to detect lanes and other vehicles \cite[p.
   2]{ulmerVITA-II}. Additional sensors 
 detected brake pressure, temperature, steering angle, acceleration in
@@ -453,7 +476,7 @@ Notably, a Congressional report described the goal as ``hands-off,
 feet-off'' driving \cite{novakAlmost}, language which returns in the NHTSA's recent
 \emph{Preliminary Statement of Policy Concerning Automated Vehicles}
 and proves similarly unhelpful, as will be described in chapter
-\ref{chap:1}.
+\ref{chap:3}.
 
 %TODO(DONE) expand
 %% Brief section about this project
@@ -464,19 +487,19 @@ and proves similarly unhelpful, as will be described in chapter
 %% never clearly defined what was meant by 'fully automated highway
 %% system.''', an important consideration for future work
 
-Further autonomous vehicle research has progressed incrementally from
+Further autonomous vehicle research has progressed from
 these vision-based beginnings. The
 DARPA Grand Challenge in 2004 and 2005 (evolving from the
   DARPA Strategic Computing project, discussed in chapter
   \ref{chap:1}), and the DARPA Urban Challenge 
 in 2007, spurred significant interest, and brought together industry
 groups and universities to 
-try to extend the capabilities of fully autonomous vehicles. The
+try to extend the capabilities of fully autonomous vehicles.\footnote{The
 military should not be discounted as a contributor to and funder of
   this research, and military visions of automated vehicles---as a way
   to remove human soldiers and transport drivers from harm's way---are
   sources of inspiration that deserve fuller
-  exploration elsewhere. While the
+  exploration elsewhere.} While the
 Grand Challenge technologies bear little resemblance to current
 navigation approaches designed to deal with the complexities of
 real-world road environments,\footnote{These vehicles basically
@@ -495,16 +518,15 @@ modern self-driving car, as instantiated within Google's design approach.
 
 Approaches today have a variety of forms. While Google is making
 headlines with its self-driving vehicle research, and is defining the
-look of the autonomous car with its roof mounted LIDAR scanner, other
+look of the autonomous car with its roof mounted LIDAR\footnote{LIght
+  Detection and Ranging} scanner, other
 companies are developing vehicles with slightly different sensors and
-techniques. Google's approach uses cameras and the rotating laser
-scanner, along with detailed pre-mapping and highly accurate
+techniques. Google supplements cameras and LIDAR with detailed pre-mapping and highly accurate
 differential GPS \cite{guizzoHow}. Mercedes, so far, focuses more on
 cameras and radar, 
-without using expensive LIDAR systems or requiring exquisitely
-detailed pre-mapping of streets---and some of these features are
+without using expensive LIDAR systems---and some of these features are
 already seen in the new S-class luxury sedan, though these vehicles
-have not yet reached the level of capability of Mercedes's ``Bertha''
+have not yet reached the level of capability of Mercedes's
 test vehicle \cite{makingBertha}. But these sensing choices come with their own
 trade-offs in terms of operations, safety, and how safety can be
 determined and proven. Even Apple seems, as of the time of writing,
@@ -528,8 +550,7 @@ achieve full self-driving at once. Automated\footnote{I use ``automated''
   either something can drive itself or it cannot. But there are
   levels even here: Under what circumstances can it be self-driving? Is
   complete self-driving capability necessary before the term applies?
-  These questions will return again and again through this thesis,
-  especially in chapters \ref{chap:1} and \ref{chap:3}. }---or even
+  These questions will return again and again through this thesis. }---or even
 ``self-driving''---vehicles are not just one, uniform type of
 device. And, critically, there is no clear
 line to be drawn between their extremes, as we will see in chapter
@@ -551,17 +572,23 @@ line to be drawn between their extremes, as we will see in chapter
 
 %% DO include the CES depictions; and contrast with the 1950s ad, at
 %% least in a footnote!
+%% ---outside of discussions of
+%% Google's desire to eliminate steering wheels facing off against
+%% regulators, or questions of whether the automakers' gradual approach
+%% or Google's ``moonshot'' approach will triumph
+%% . In fact, the interior is
+%% covered in touchable displays,
 One would be excused, however, for thinking differently. The popular
 portrayal of self-driving technology is often lacking in nuance. While
 there is a fair amount of popular argument about whether these
 vehicles will be beneficial (or how beneficial they will be) along
 various axes of interest, there is relatively little discussion of
-\emph{what} these vehicles will actually be---outside of discussions of
-Google's desire to eliminate steering wheels facing off against
-regulators, or questions of whether the automakers' gradual approach
-or Google's ``moonshot'' approach will triumph: the implicit
+\emph{what} these vehicles will actually be: the implicit
 assumption is that everyone is headed for the same technological
-goals, the same ultimate type of device.
+goals, the same ultimate type of device, approached gradually or all-at-once.
+
+%%  (like the seating arrangement from the 1950s
+%% \emph{Saturday Evening Post} ad)
 
 At the Consumer Electronics Show in Las Vegas, in January
 2015, visions of the driverless car stood front and center. Prototypes
@@ -569,10 +596,8 @@ and concepts at CES worked glitz and glamour into the dream of a
 driverless future. Mercedes-Benz's F015 autonomous car
 concept forgoes the traditional seating arrangement in favor of
 rotating chairs that turn the center of the car into a lounge or
-meeting space (like the seating arrangement from the 1950s
-\emph{Saturday Evening Post} ad) \cite{riofrioMB}. The car's side windows are relatively minimal, its
-doors taken up primarily by touch screens. In fact, the interior is
-covered in touchable displays, set up for an immersive digital
+meeting space \cite{riofrioMB}. The car's side windows are relatively minimal, its
+doors taken up primarily by touch screens, set up for an immersive digital
 experience. But beneath this shiny media exterior sits a relatively
 unglamorous purpose:  its publicity photos show serious-looking, young, white
 businesspeople in uniform grey work clothing \cite{simpsonDesign}. The environment is
@@ -612,20 +637,13 @@ eldest son can get his license \cite{gomesObstacles}), and expects
 these vehicles not to have steering wheels or the possibility of human
 control. That these vehicles would operate on public roadways is not
 stated explicitly---and seems optimistic given the speed of regulation
-alone---but is implied in these kinds of statements. 
-
-%%TODO (DONE)
-%% ???-To be written
-%% Tesla and forthcoming ``autopilot'' mode, which explicitly involved aircraft
-%% discourse and refers back to the first cruise control Chrysler ``Auto Pilot''
-
-Elon Musk's electric car company, Tesla Motors, is working on an
-``autopilot'' mode for their cars, intended to be released publicly by
-the summer of 2015, 
-which explicitly invokes both existing aircraft automation---or at
-least popular ideas about it---and Chrysler's early ``Auto Pilot''
+alone---but is implied in these kinds of statements. Elon Musk's
+electric car company, Tesla Motors, is working on an 
+``autopilot''\footnote{This name explicitly invokes aircraft
+  automation, and repeats the name of Chrysler's early ``Auto Pilot''
 cruise-control system, from the late 1950s
-\cite{kesslerElon}.
+\cite{kesslerElon}.} mode for their cars, intended to be released publicly by
+the summer of 2015.
 Though Tesla is clear that human involvement and judgment will be
 required at first, Musk suggests 
 that once sufficiently capable vehicles 
@@ -635,6 +653,12 @@ In this vision, the technology is ready, or almost ready, and law and policy nee
 adapt. ``Robots can already outdrive humans,'' the optimistic view says, ``now
 everyone needs to get out of the way''
 \cite{fisherInside}.
+
+%%TODO (DONE)
+%% ???-To be written
+%% Tesla and forthcoming ``autopilot'' mode, which explicitly involved aircraft
+%% discourse and refers back to the first cruise control Chrysler ``Auto Pilot''
+
 
 %% 2) deal in general with some of the popular portrayals of the
 %% technology:  (4 p)
@@ -664,9 +688,7 @@ driverless vehicle research, believes that given the
 catastrophic potential for errors, the reliability requirement
 for these systems---''four nines,'' as he describes it---renders the
 technology ``a long way 
-off'' \cite{shontellTop}.
-Even statements from very respected autonomy researchers are used to
-support this view: John Leonard, notable as one of the researchers who
+off'' \cite{shontellTop}. John Leonard, notable as one of the researchers who
 worked on MIT's entrant to the DARPA Urban Challenge in 2007, has gone
 on the record multiple times about his doubts, and has become a very
 public face for driverless car skepticism \cite{ramseyWhen} \cite{gomesCircles}.
@@ -675,18 +697,27 @@ public face for driverless car skepticism \cite{ramseyWhen} \cite{gomesCircles}.
 %% argument between the technophiles and the naysayers, the daring dreamers versus the
 %% conservative pragmatists. But 
 
+%% Both these narratives 
+%% tend to take a certain possible future of technology and either support it
+%% or illustrate its problems, without challenging that fundamental
+%% picture. 
+
 There is much more to the story than is
-apparent in this simplistic dual-narrative. Both popular visions of this
+apparent in this simplistic dual-narrative.  A few
+articles about automated vehicles remember the history, from the 1939
+World's Fair \cite{CBSPetersen} to the Firebird concept cars
+\cite{walshVs} to Dickmanns's work in the 
+1990s \cite{HCRIDriverless} and DARPA's investments in automated
+driving---the latter largely stripped of its
+ military valences \cite{economistSR}. But these are generally subsumed by an imagined
+ historical through-line, and both popular visions of this
 technology focus on the future, and do relatively little to
-investigate the past or present, how we got to 
+investigate the past or present: how we got to 
 where we are now, or even what level of autonomy we currently see in
 our vehicles. And few people seem to dispute what the object is that is
 being discussed, or how else it might look.\footnote{Though it should
   be said that John Leonard, for example, has much more nuanced views
-  on the subject than get represented in these narratives.} Both these narratives 
-tend to take a certain possible future of technology and either support it
-or illustrate its problems, without challenging that fundamental
-picture. The idea that ``if you are asked to take control, we've
+  on the subject than get represented in these narratives.} The idea that ``if you are asked to take control, we've
 failed'' has become deeply ingrained in our development
 culture, more than just as a risk-mitigation strategy but as a guiding
 ideology. But as we will see, this view does not hold together given
@@ -698,27 +729,7 @@ historical examples.
 
 %%TODO (DONE) consider: ; or even to some extent ontological position of a
 %%self-driving car that ``knows'' nothing 
- A few
-articles about automated vehicles remember the history, from the 1939
-World's Fair \cite{CBSPetersen} to the Firebird concept cars
-\cite{walshVs} to Dickmanns's work in the 
-1990s \cite{HCRIDriverless} and DARPA's investments in automated
-driving \cite{economistSR}---the latter largely stripped of its
- military valences. But these are generally subsumed by an imagined
- historical through-line. The nature of the self-driving car as it will appear in
-the near future is not self-evident, however, no matter how loud Google's voice
-or how large their investment.
- These technologies and visions of them
-enact certain ideologically charged activities---such as supporting
-particular research agendas---and these can be traced through the
-histories and current discourses of the fields involved.
-The particular epistemologies of the research fields that contribute
-to this vision greatly affect what is considered, and valued, and
-pushed forward. And recognizing the ideological charges behind
-self-driving vehicle 
-work, and examining alternatives, might lead us to expect a very
-different technology with very
-different social and cultural impacts. 
+
 
 %% 1) What are the stories we are hearing? 
 %% 2) Where do they come from?
@@ -730,45 +741,76 @@ different social and cultural impacts.
 %TODO (DONE) alter the end of this if the conclusion becomes two chapters
 \section{Overview}
 
-This thesis is organized around several key questions. First, what are
-the dominant narratives of self-driving vehicles and where do they
-come from? In chapter \ref{chap:1}, I continue examining
-the media's representation of self-driving vehicles and
+%% The nature of the self-driving car as it will appear in
+%% the near future is not self-evident, however, no matter how loud Google's voice
+%% or how large their investment. These technologies and visions of them
+%% enact certain ideologically charged activities---such as supporting
+%% particular research agendas---and these can be traced through the
+%% histories and current discourses of the fields involved.
+%% The particular epistemologies of the research fields that contribute
+%% to this vision greatly affect what is considered, and valued, and
+%% pushed forward. And recognizing the ideological charges behind
+%% self-driving vehicle 
+%% work, and examining alternatives, might lead us to expect a very
+%% different technology with very
+%% different social and cultural impacts. 
+
+%% I argue that 
+
+%% This thesis is organized around several key questions. First, what are
+%% the dominant narratives of self-driving vehicles and where do they
+%% come from?
+
+%% , looking
+%% both at some of the literature in the field of human supervisory
+%% control, and historical examples from other regimes of automation
+%% that
+
+%% Third, what other potential
+%% narratives for automation,
+%% particularly vehicle automation, exist?
+
+%% Finally, where can we go, as a
+%% culture, from this realization? What understandings need to change to
+%% make this picture more broadly comprehensible? And what should it mean
+%% for policy? While this is a broad topic, itself worthy of a thesis,
+
+%% I
+%% argue in the conclusion that the contrasts
+%% between the rhetorics of artificial intelligence and supervisory
+%% control, which really describe many of the same artifacts, point the
+%% way.
+
+%% Taking seriously human beings as cyborg
+%% entities can alter public
+%% opinion and policy in
+%% productive ways.
+
+This thesis is organized around investigating dominant narratives of
+self-driving vehicles and their gaps. In chapter \ref{chap:1}, I continue examining
 the sources of the idea, common both among the media and among
 self-driving vehicle researchers, that complete vehicle autonomy is
-the only future vision worth discussing and investigating. Second,
-what are the stakes of telling this kind of story? In chapter
-\ref{chap:2}, I describe some of the technologies involved in
-automation, and the fields with which visions of full automation are
+the only future vision worth discussing and investigating. And I
+describe historical automation precedents that bear on automated cars. In chapter
+\ref{chap:2}, I address design fictions and the issues presented by technologies involved in
+automation (and the fields with which visions of full automation are
 intertwined: computer vision, urban planning, machine ethics, and
-others. Taking the popular narrative at face value presents the
+others). Taking the popular narrative at face value presents the
 possibility of certain kinds of futures---with important
 disadvantages---while foreclosing on others in ways that must be
-carefully examined. I argue that adding autonomy to cars does not,
-alone, solve any social problems. Successfully addressing social
-issues requires careful design at a whole-system level, involving
-people, vehicles, and infrastructure. Third, what other potential
-narratives for automation,
-particularly vehicle automation, exist? In chapter \ref{chap:3}, I
-examine an alternative paradigm for thinking about automation, looking
-both at some of the literature in the field of human supervisory
-control, and historical examples from other regimes of automation that
+carefully examined. In chapter \ref{chap:3}, I
+examine an alternative paradigm for thinking about automation, and
 make the case for why supervisory control is an acceptable---and in
 many ways, more apt---alternative for considering what automation is
 and does. But, as I describe, supervisory control presents a very
 different read on what automation means and where it is headed in the
 future, which leads to the possibility of different futures, with
-different stakes and trade-offs. Finally, where can we go, as a
-culture, from this realization? What understandings need to change to
-make this picture more broadly comprehensible? And what should it mean
-for policy? While this is a broad topic, itself worthy of a thesis, I
-argue in the conclusion that the contrasts
-between the rhetorics of artificial intelligence and supervisory
-control, which really describe many of the same artifacts, point the
-way. A broader appreciation for our hybrid lives, our hybrid
-engagements with machines---human beings as cyborgs---can alter public
-opinion and policy in
-productive ways. This appreciation allows us to shift the fundamental
+different stakes and trade-offs. Finally, in the conclusion, I briefly examine the
+historical re-shaping of roadways, and argue that adding autonomy to cars does not,
+alone, solve any social problems. Successfully addressing social
+issues requires careful design at a whole-system level, involving
+people, vehicles, infrastructure, and a broader appreciation for our hybrid
+engagements with machines. This appreciation allows us to shift the fundamental
 questions we ask about technology in a way that is, hopefully,
 productive for research and policy-making.
 
@@ -787,11 +829,14 @@ productive for research and policy-making.
 %% one.} Different technological possibilities produce several visions of
 %% what society might be, but e
 
+%% something
+%% understood and on which a meaningful ideological critique could be
+%% based
+
 I originally set out to critically examine the cultural and social
 implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
-conceived of driverless cars as just-another-AI-technology, something
-understood and on which a meaningful ideological critique could be
-based. But as I researched, I discovered that not only did
+conceived of driverless cars as just-another-AI-technology. But as I
+researched, I discovered that not only did 
 self-driving cars lack a fixed social meaning---their uses and
 contexts still up for grabs---but the technology itself is unspecified
 in profound and important ways. In an apt lesson for an early researcher,
